5 - Notebooks e Data/1 - Análises numéricas/Arquivos David/Atualizados/logDicas-master/data/2019-1/223/users/4444/executions/1595_1571.log
== TEST (2019-04-01 19:28:11) 
-- CODE:
# Teste seu codigo aos poucos.
# Nao teste tudo no final, pois fica mais dificil de identificar erros.
# Nao se intimide com as mensagens de erro. Elas ajudam a corrigir seu codigo.
texto="Ana Micla Barbosa"
print(texto.upper())
-- OUTPUT:
ANA MICLA BARBOSA
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-01 19:28:20) 
-- CODE:
# Teste seu codigo aos poucos.
# Nao teste tudo no final, pois fica mais dificil de identificar erros.
# Nao se intimide com as mensagens de erro. Elas ajudam a corrigir seu codigo.
texto="Ana Micla Barbosa"
print(texto.upper())
-- OUTPUT:
ANA MICLA BARBOSA
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-04-01 19:28:26) 
-- CODE:
# Teste seu codigo aos poucos.
# Nao teste tudo no final, pois fica mais dificil de identificar erros.
# Nao se intimide com as mensagens de erro. Elas ajudam a corrigir seu codigo.
texto="Ana Micla Barbosa"
print(texto.upper())
-- EXECUTION TIME:
0.134786
-- TEST CASE 1:
---- input:
Primeiro_caso_de_teste
---- correct output:
PRIMEIRO_CASO_DE_TESTE
---- user output:
ANA MICLA BARBOSA
-- GRADE:
0%
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-01 19:30:26) 
-- CODE:
# Teste seu codigo aos poucos.
# Nao teste tudo no final, pois fica mais dificil de identificar erros.
# Nao se intimide com as mensagens de erro. Elas ajudam a corrigir seu codigo.
texto=input("Selina Kyle")
print(texto.upper())
-- OUTPUT:
PRIMEIRO_CASO_DE_TESTE
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-04-01 19:30:39) 
-- CODE:
# Teste seu codigo aos poucos.
# Nao teste tudo no final, pois fica mais dificil de identificar erros.
# Nao se intimide com as mensagens de erro. Elas ajudam a corrigir seu codigo.
texto=input("Selina Kyle")
print(texto.upper())
-- EXECUTION TIME:
0.107094
-- TEST CASE 1:
---- input:
Primeiro_caso_de_teste
---- correct output:
PRIMEIRO_CASO_DE_TESTE
---- user output:
PRIMEIRO_CASO_DE_TESTE
-- GRADE:
100%
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-01 19:30:50) 
-- CODE:
# Teste seu codigo aos poucos.
# Nao teste tudo no final, pois fica mais dificil de identificar erros.
# Nao se intimide com as mensagens de erro. Elas ajudam a corrigir seu codigo.
texto=input("Selina Kyle")
print(texto.upper())
-- OUTPUT:
PRIMEIRO_CASO_DE_TESTE
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-04-01 19:31:10) 
-- CODE:
# Teste seu codigo aos poucos.
# Nao teste tudo no final, pois fica mais dificil de identificar erros.
# Nao se intimide com as mensagens de 
erro. Elas ajudam a corrigir seu codigo.
texto=input("Selina Kyle")
print(texto.upper())
-- EXECUTION TIME:
0.196267
-- ERROR:
  File "/home/codebench/codes/1595/1571/main.py", line 4
    erro. Elas ajudam a corrigir seu codigo.
                    ^
SyntaxError: invalid syntax

*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-04-01 19:31:25) 
-- CODE:
# Teste seu codigo aos poucos.
# Nao teste tudo no final, pois fica mais dificil de identificar erros.
# Nao se intimide com as mensagens de 
erro. Elas ajudam a corrigir seu codigo.
texto=input("Selina Kyle")
print(texto.upper())
-- EXECUTION TIME:
0.200194
-- ERROR:
  File "/home/codebench/codes/1595/1571/main.py", line 4
    erro. Elas ajudam a corrigir seu codigo.
                    ^
SyntaxError: invalid syntax

*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-04-01 19:32:27) 
-- CODE:
# Teste seu codigo aos poucos.
# Nao teste tudo no final, pois fica mais dificil de identificar erros.
# Nao se intimide com as mensagens de 
erro. Elas ajudam a corrigir seu codigo.
texto=input("Selina Kyle")
print(texto.upper())
-- EXECUTION TIME:
0.160875
-- ERROR:
  File "/home/codebench/codes/1595/1571/main.py", line 4
    erro. Elas ajudam a corrigir seu codigo.
                    ^
SyntaxError: invalid syntax

*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-01 19:32:52) 
-- CODE:
# Teste seu codigo aos poucos.
# Nao teste tudo no final, pois fica mais dificil de identificar erros.
# Nao se intimide com as mensagens de 
erro. Elas ajudam a corrigir seu codigo.
texto="Selina Kyle"
print(texto.upper())
-- ERROR:
File "XXXX", line 4
    erro. Elas ajudam a corrigir seu codigo.
                    ^
SyntaxError: invalid syntax
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-01 19:33:08) 
-- CODE:
# Teste seu codigo aos poucos.
# Nao teste tudo no final, pois fica mais dificil de identificar erros.
# Nao se intimide com as mensagens de 
erro. Elas ajudam a corrigir seu codigo.
texto= "Selina Kyle"
print(texto.upper())
-- ERROR:
File "XXXX", line 4
    erro. Elas ajudam a corrigir seu codigo.
                    ^
SyntaxError: invalid syntax
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-01 19:33:27) 
-- CODE:
# Teste seu codigo aos poucos.
# Nao teste tudo no final, pois fica mais dificil de identificar erros.
# Nao se intimide com as mensagens de 
erro. Elas ajudam a corrigir seu codigo.
texto= "Selina Kyle"
print(texto.UPPER())
-- ERROR:
File "XXXX", line 4
    erro. Elas ajudam a corrigir seu codigo.
                    ^
SyntaxError: invalid syntax
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-04-01 19:33:49) 
-- CODE:
# Teste seu codigo aos poucos.
# Nao teste tudo no final, pois fica mais dificil de identificar erros.
# Nao se intimide com as mensagens de 
erro. Elas ajudam a corrigir seu codigo.
texto=input("Selina Kyle")
print(texto.UPPER())
-- EXECUTION TIME:
0.193506
-- ERROR:
  File "/home/codebench/codes/1595/1571/main.py", line 4
    erro. Elas ajudam a corrigir seu codigo.
                    ^
SyntaxError: invalid syntax

*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-01 19:34:01) 
-- CODE:
# Teste seu codigo aos poucos.
# Nao teste tudo no final, pois fica mais dificil de identificar erros.
# Nao se intimide com as mensagens de 
erro. Elas ajudam a corrigir seu codigo.
texto=input(Selina Kyle)
print(texto.UPPER())
-- ERROR:
File "XXXX", line 4
    erro. Elas ajudam a corrigir seu codigo.
                    ^
SyntaxError: invalid syntax
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-01 19:34:22) 
-- CODE:
# Teste seu codigo aos poucos.
# Nao teste tudo no final, pois fica mais dificil de identificar erros.
# Nao se intimide com as mensagens de 
erro. Elas ajudam a corrigir seu codigo.
texto=input("Selina Kyle")
print(texto.upper)
-- ERROR:
File "XXXX", line 4
    erro. Elas ajudam a corrigir seu codigo.
                    ^
SyntaxError: invalid syntax
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-01 19:34:38) 
-- CODE:
# Teste seu codigo aos poucos.
# Nao teste tudo no final, pois fica mais dificil de identificar erros.
# Nao se intimide com as mensagens de 
erro. Elas ajudam a corrigir seu codigo.
texto=input("Selina Kyle")
print(texto.upper)
-- ERROR:
File "XXXX", line 4
    erro. Elas ajudam a corrigir seu codigo.
                    ^
SyntaxError: invalid syntax
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-04-01 19:34:42) 
-- CODE:
# Teste seu codigo aos poucos.
# Nao teste tudo no final, pois fica mais dificil de identificar erros.
# Nao se intimide com as mensagens de 
erro. Elas ajudam a corrigir seu codigo.
texto=input("Selina Kyle")
print(texto.upper)
-- EXECUTION TIME:
0.143597
-- ERROR:
  File "/home/codebench/codes/1595/1571/main.py", line 4
    erro. Elas ajudam a corrigir seu codigo.
                    ^
SyntaxError: invalid syntax

*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-01 19:34:46) 
-- CODE:
# Teste seu codigo aos poucos.
# Nao teste tudo no final, pois fica mais dificil de identificar erros.
# Nao se intimide com as mensagens de 
erro. Elas ajudam a corrigir seu codigo.
texto=input("Selina Kyle")
print(texto.upper)
-- ERROR:
File "XXXX", line 4
    erro. Elas ajudam a corrigir seu codigo.
                    ^
SyntaxError: invalid syntax
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-04-01 19:34:50) 
-- CODE:
# Teste seu codigo aos poucos.
# Nao teste tudo no final, pois fica mais dificil de identificar erros.
# Nao se intimide com as mensagens de 
erro. Elas ajudam a corrigir seu codigo.
texto=input("Selina Kyle")
print(texto.upper)
-- EXECUTION TIME:
0.153458
-- ERROR:
  File "/home/codebench/codes/1595/1571/main.py", line 4
    erro. Elas ajudam a corrigir seu codigo.
                    ^
SyntaxError: invalid syntax

*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-01 19:34:58) 
-- CODE:
# Teste seu codigo aos poucos.
# Nao teste tudo no final, pois fica mais dificil de identificar erros.
# Nao se intimide com as mensagens de 
erro. Elas ajudam a corrigir seu codigo.
texto=input("Selina Kyle")
print(texto.upper)
-- ERROR:
File "XXXX", line 4
    erro. Elas ajudam a corrigir seu codigo.
                    ^
SyntaxError: invalid syntax
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-01 19:35:06) 
-- CODE:
# Teste seu codigo aos poucos.
# Nao teste tudo no final, pois fica mais dificil de identificar erros.
# Nao se intimide com as mensagens de 
erro. Elas ajudam a corrigir seu codigo.
texto=input("Selina Kyle")
print(texto.upper())
-- ERROR:
File "XXXX", line 4
    erro. Elas ajudam a corrigir seu codigo.
                    ^
SyntaxError: invalid syntax
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-04-01 19:48:45) 
-- CODE:
# Teste seu codigo aos poucos.
# Nao teste tudo no final, pois fica mais dificil de identificar erros.
# Nao se intimide com as mensagens de 
erro. Elas ajudam a corrigir seu codigo.
msg=input("Selina Kyle")
print(msg.upper())
-- EXECUTION TIME:
0.119707
-- ERROR:
  File "/home/codebench/codes/1595/1571/main.py", line 4
    erro. Elas ajudam a corrigir seu codigo.
                    ^
SyntaxError: invalid syntax

*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-04-01 19:48:57) 
-- CODE:
# Teste seu codigo aos poucos.
# Nao teste tudo no final, pois fica mais dificil de identificar erros.
# Nao se intimide com as mensagens de 
erro. Elas ajudam a corrigir seu codigo.
msg=input("Selina Kyle")
print(msg.upper())
-- EXECUTION TIME:
0.165917
-- ERROR:
  File "/home/codebench/codes/1595/1571/main.py", line 4
    erro. Elas ajudam a corrigir seu codigo.
                    ^
SyntaxError: invalid syntax

*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-04-01 19:49:23) 
-- CODE:
msg=input("aaaaaaaaaa")
print(msg.upper())
-- EXECUTION TIME:
0.186097
-- TEST CASE 1:
---- input:
Primeiro_caso_de_teste
---- correct output:
PRIMEIRO_CASO_DE_TESTE
---- user output:
PRIMEIRO_CASO_DE_TESTE
-- GRADE:
100%
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-02 15:59:00) 
-- CODE:
msg=input("aaaaaaaaaa")
print(msg.upper())
-- OUTPUT:
PRIMEIRO_CASO_DE_TESTE
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
